//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  name String
  password String [not null]
  isVarified Boolean [not null, default: false]
  avatar String [default: 'https://t3.ftcdn.net/jpg/06/33/54/78/360_F_633547842_AugYzexTpMJ9z1YcpTKUBoqBF0CUCk10.jpg']
  description String
  expoPushToken String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  otps OTP [not null]
  transactions Transactions [not null]
  categories Category [not null]
  budgets Budget [not null]
  goals Goal [not null]
}

Table OTP {
  id String [pk]
  otp String [unique, not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiresAt DateTime [not null]
  user User [not null]
}

Table Transactions {
  id String [pk]
  title String [not null]
  description String [default: '']
  amount Float [not null]
  number Int
  type TransactionType [not null]
  receipt String
  categoryId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  category Category [not null]
  budgetId String
  GoalTransaction GoalTransaction [not null]
  Budget Budget
}

Table Category {
  id String [pk]
  name String [not null]
  iconId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  transactions Transactions [not null]
  user User [not null]
  icons Icon
}

Table Icon {
  id String [pk]
  name String [unique, not null]
  icon String [not null, default: 'https://cdn-icons-png.flaticon.com/512/2920/2920320.png']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categories Category [not null]
  Budget Budget [not null]
}

Table Goal {
  id String [pk]
  name String [not null]
  amount Float [not null]
  targetDate DateTime [not null]
  icon String [default: 'https://img.icons8.com/?size=100&id=20884&format=png&color=6957E7']
  achieved Boolean [not null, default: false]
  achievedDate DateTime
  emailSent Boolean [not null, default: false]
  userId String [not null]
  savedAmount Float [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  goalTransactions GoalTransaction [not null]

  indexes {
    (name, userId) [unique]
  }
}

Table GoalTransaction {
  id String [pk]
  goalId String [not null]
  transactionId String [not null]
  goal Goal [not null]
  transaction Transactions [not null]
}

Table Budget {
  id String [pk]
  name String [not null]
  amount Float [not null]
  description String [not null]
  icon String [default: 'https://img.icons8.com/?size=100&id=484&format=png&color=6957E7']
  userId String [not null]
  leftToSpend Float [not null, default: 0]
  isCompleted Boolean [not null, default: false]
  isEditted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  transactions Transactions [not null]
  Icon Icon
  iconId String

  indexes {
    (name, userId) [unique]
  }
}

Enum TransactionType {
  INCOME
  EXPENSE
}

Enum GoalType {
  INCOME
  EXPENSE
  SAVINGS
}

Ref: OTP.userId > User.id

Ref: Transactions.userId > User.id

Ref: Transactions.categoryId > Category.id [delete: Cascade]

Ref: Transactions.budgetId > Budget.id

Ref: Category.userId > User.id [delete: Cascade]

Ref: Category.iconId > Icon.id

Ref: Goal.userId > User.id [delete: Cascade]

Ref: GoalTransaction.goalId > Goal.id

Ref: GoalTransaction.transactionId > Transactions.id

Ref: Budget.userId > User.id [delete: Cascade]

Ref: Budget.iconId > Icon.id